# cli-kneeboard

./: .gitignore  .pre-commit-checklist.md  Cargo.toml  LICENSE  Makefile  Makefile.toml  NOTES.md  README.md  SPEC.md  bacon.toml
.github/workflows/: _build_linux_target.yml  _build_macos_target.yml  build.yml  release.yml
__test__/test_checklists/: .21f98c40259cb4b4.kb.toml  test1.md  test2.md  test3.md
hooks/: pre-commit
src/: checklist.rs  libs.rs  main.rs
src/checklist/: checklist.rs  mod.rs  model.rs  tests.rs
src/helpers/: logger.rs  mod.rs  ui.rs
src/libs/: checklist.rs  mod.rs
tests/: integration.rs
