[package]
name = "cli-kneeboard"
version = "0.3.2"
edition = "2021"
license = "MIT"
authors = ["Alexis Lowe <agl314@chimbosonic.com>"]
description = "Checklist Tool"
readme = "README.md"
categories = ["command-line-utilities"]
repository = "https://github.com/chimbosonic/cli-kneeboard"
keywords = ["todo", "git-hook", "markdown", "git", "checklist"]

[dependencies]
clap = { version = "4.5.16", features = ["derive"] }
env_logger = "0.11.5"
log = "0.4.22"
pulldown-cmark = "0.12.0"
serde = "1.0.209"
serde_derive = "1.0.209"
toml = "0.8.19"
time = { version = "0.3.36", features = ["serde-well-known"] }

[dev-dependencies]
test-log = "0.2.16"
testing_logger = "0.1.1"

[dependencies.cursive]
version = "0.21.1"
default-features = false
features = ["crossterm-backend"]

[[bin]]
name = "kneeboard"
path = "src/main.rs"

[profile.release]
opt-level = 3
strip = "debuginfo"
lto = true
panic = "abort"
debug = false

# Optimize local dev builds
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
