[package]
name = "cli-kneeboard"
version = "0.3.3"
edition = "2024"
license = "MIT"
authors = ["Alexis Lowe <agl314@chimbosonic.com>"]
description = "Checklist Tool"
readme = "README.md"
categories = ["command-line-utilities"]
repository = "https://github.com/chimbosonic/cli-kneeboard"
keywords = ["todo", "git-hook", "markdown", "git", "checklist"]

[dependencies]
clap = { version = "4.5.48", features = ["derive"] }
env_logger = "0.11.8"
log = "0.4.28"
pulldown-cmark = "0.13.0"
serde = {version = "1.0.226", features = ["derive"]}
toml = "0.9.7"
time = { version = "0.3.44", features = ["serde-well-known"] }

[dev-dependencies]
test-log = "0.2.18"
testing_logger = "0.1.1"

[dependencies.cursive]
version = "0.21.1"
default-features = false
features = ["crossterm-backend"]

[[bin]]
name = "kneeboard"
path = "src/main.rs"

[profile.release]
opt-level = 3
strip = "debuginfo"
lto = true
panic = "abort"
debug = false

# Optimize local dev builds
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
