[package]
name = "cli-kneeboard"
version = "0.3.4"
edition = "2024"
license = "MIT"
authors = ["Alexis Lowe <agl314@chimbosonic.com>"]
description = "Checklist Tool"
readme = "README.md"
categories = ["command-line-utilities"]
repository = "https://github.com/chimbosonic/cli-kneeboard"
keywords = ["todo", "git-hook", "markdown", "git", "checklist"]

[dependencies]
clap = { version = "4.5.60", features = ["derive"] }
env_logger = "0.11.9"
log = "0.4.29"
pulldown-cmark = "0.13.0"
serde = {version = "1.0.228", features = ["derive"]}
toml = "1.0.3"
time = { version = "0.3.47", features = ["serde-well-known"] }

[dev-dependencies]
test-log = "0.2.19"
testing_logger = "0.1.1"

[dependencies.cursive]
version = "0.21.1"
default-features = false
features = ["crossterm-backend"]

[[bin]]
name = "kneeboard"
path = "src/main.rs"

[profile.release]
opt-level = 3
strip = "debuginfo"
lto = true
panic = "abort"
debug = false

# Optimize local dev builds
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
